  and randgen()
- extend the invcdf() function to the Gamma and std. GED distributions
- build with SSE2 enabled: ensure that the C compiler SSE2 option is
  not wiped out if the user (re-)specifies CFLAGS when doing "make"
- Defining lists: document the wildcard operator, *, and add an
  ellipsis operator (two dots).
- VARs: (re-)enable HAC standard errors via a new option, --robust-hac
- "omit" and "add" commands: add a --test-only option to prevent the
  reduced or augmented model from being saved as "last model"
- "makepkg" command: add options to produce an XML index entry and a
  file of translatable strings suitable for use with gettext
- Add facility for inspecting the list of gretl addons, under the GUI
  Help menu
- Download of textbook data-file packages: use sourceforge for better
  reliability
- Graphing ("gnuplot" command and GUI): generalize the option of
  separation using a binary dummy to allow use of discrete variables
- "boxplot" command: add --factorized and --panel options; also
  enhance the boxplot options available via the GUI
- "arima" command (native exact ML variant): add a --hessian option to
  enforce computation of standard errors using the Hessian; if this
  option is not given, allow use of OPG as fallback if the numerical
  Hessian cannot be computed
- X-12-ARIMA and TRAMO analysis: allow the user to supply names when
  saving series to the dataset
- Declaration of new series: set initial values to NA, not zero
- Fix bug: a nested "foreach" loop using a named list, with the name of
  the list subject to dollar-substitution via the parent loop, produced
  an "unknown variable" error
- Fix bug: The symbol "<-" for assignment to an object could get confused
  with a mathematical expression such as "x<-1.0"
- Fix bug: reading beyond array bound in numerical Hessian
- Fix bug in GUI function-package editor: could crash on adding a new
  function to a package
- Fix bug in GUI function-package editor: "edit code" not working for